# lab_optimizer

./: .gitignore  LICENSE  README.md  f_test.py  h_fit.py  nonce.txt  pyproject.toml  setup.py  target.txt  test.py
lab_optimization/: __init__.py  global_optimize.py
lab_optimization/M-LOOP_archives/: controller_archive_2024-11-16_16-04.txt  learner_archive_2024-11-16_16-15.txt
lab_optimizer/: __init__.py  agent_model.py  global_optimize.py  local_optimize.py  mloop_optimize.py  opt_examples.py  optimize_base.py  test.py  torch_optimize.py  units.py
lab_optimizer.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
lab_optimizer/M-LOOP_archives/: controller_archive_2024-11-16_16-12.txt  controller_archive_2024-11-16_16-15.txt  learner_archive_2024-11-16_16-12.txt
lab_optimizer/opt_lib/: ISMA.py  __init__.py  test_functions.py
labopt_logs/lab_opt_2024_11/: optimization__2024-11-17-13-14__dual_annealing__.txt  optimization__2024-11-17-14-23__AdamW__.txt  optimization__2024-11-17-14-24__AdamW__.txt  optimization__2024-11-18-13-32__dual_annealing__.txt  optimization__2024-11-18-13-33__dual_annealing__.txt  optimization__2024-11-18-14-27__dual_annealing__.txt  optimization__2024-11-18-14-28__shgo__.txt  optimization__2024-11-18-14-29__shgo__.txt  optimization__2024-11-18-14-30__shgo__.txt  optimization__2024-11-18-14-31____.txt  optimization__2024-11-18-14-32__differential_evolution__.txt  optimization__2024-11-18-14-33__differential_evolution__.txt  optimization__2024-11-18-14-35__ahgo__.txt  optimization__2024-11-18-14-36__ahgo__.txt  (+32 more)
(+1 files in other folders)
